edit plan, splash, new photos, card edit

--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -79,6 +79,10 @@
                           Billing Details
                             <a class="editOption" data-toggle="modal" data-target="#squarespaceModal7"><p>Change Billing Details</p></a>
                         </div>
+                        <div class="contextBodyProfile border-dark">
+                          Subscription
+                            <a class="editOption" href="EditPlan.html"><p>Change Subscription</p></a>
+                        </div>
                       <br>
                         <div class="contextBodyTitle text-left border-top border-dark">
                           Profile
@@ -194,7 +198,7 @@
     </div>
   </div>
 </div>
-       
+     
 <!-- line modal for password -->
 <div class="modal fade" id="squarespaceModal4" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog">
@@ -316,7 +320,8 @@
     </div>
   </div>
 </div>
-    
+
+ 
 <!-- Footer -->
 <footer class="page-footer font-small footerCustom">
 
