--- a/views/card.ejs
+++ b/views/card.ejs
@@ -14,8 +14,7 @@
   <!-- Custom fonts for this template-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-  <script src="js/example1.js" data-rel-js></script>
+    
   <script src="https://js.stripe.com/v3/"></script>
     
   <script src="js/index.js" data-rel-js></script>
@@ -27,6 +26,7 @@
     
   <link rel="stylesheet" type="text/css" href="css/base.css" data-rel-css="" />
   <!-- CSS for each example: -->
+       <link rel="stylesheet" type="text/css" href="css/example3.css" data-rel-css="" /> 
   <link rel="stylesheet" type="text/css" href="css/example1.css" data-rel-css="" />
     
 <!-- jQuery library -->
@@ -56,7 +56,8 @@
       <a class="signinText" href="login.html">Sign In</a>
     </div>
 </nav>
-      
+<br><br><br>
+    
     <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-12 col-md-9">
         <div class="card o-hidden border-0 my-5">
@@ -84,36 +85,36 @@
           <fieldset>
             <div class="row">
               <label for="example1-name" data-tid="elements_examples.form.name_label">Name</label>
-              <input id="example1-name" data-tid="elements_examples.form.name_placeholder" type="text" name="name" placeholder="Jane Doe" required="" autocomplete="name">
+              <input id="example1-name" data-tid="elements_examples.form.name_placeholder" type="text" name="name" placeholder="Jane Doe" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Jane Doe'" required="" autocomplete="name">
             </div>
             <div class="row">
               <label for="example1-email" data-tid="elements_examples.form.email_label">Email</label>
-              <input id="example1-email" data-tid="elements_examples.form.email_placeholder" type="email" placeholder="janedoe@gmail.com" required="" autocomplete="email">
+              <input id="example1-email" data-tid="elements_examples.form.email_placeholder" type="email" placeholder="janedoe@gmail.com" onfocus="this.placeholder = ''" onblur="this.placeholder = 'janedoe@gmail.com'" required="" autocomplete="email">
             </div>
             <div class="row" style="border-bottom: 1px solid darkgrey">
               <label for="example1-phone" data-tid="elements_examples.form.phone_label">Phone</label>
-              <input id="example1-phone" data-tid="elements_examples.form.phone_placeholder" type="tel" name="phone" placeholder="(941) 555-0123" required="" autocomplete="tel">
+              <input id="example1-phone" data-tid="elements_examples.form.phone_placeholder" type="tel" name="phone" placeholder="(941) 555-0123" onfocus="this.placeholder = ''" onblur="this.placeholder = '(941) 555-0123'" required="" autocomplete="tel">
             </div>
               
             <div data-locale-reversible>
               <div class="row">
                 <div class="field">
                   <label for="example5-address" data-tid="elements_examples.form.address_label">Address</label>
-                  <input id="example5-address" name="addr" data-tid="elements_examples.form.address_placeholder" class="input" type="text" placeholder="185 Berry St" required="" autocomplete="address-line1">
+                  <input id="example5-address" name="addr" data-tid="elements_examples.form.address_placeholder" class="input" type="text" placeholder="185 Berry St" onfocus="this.placeholder = ''" onblur="this.placeholder = '185 Berry St'" required="" autocomplete="address-line1">
                 </div>
               </div>
               <div class="row" data-locale-reversible>
                 <div class="field address">
                   <label for="example5-city" data-tid="elements_examples.form.city_label">City</label>
-                  <input id="example5-city" name="city" data-tid="elements_examples.form.city_placeholder" class="input" type="text" placeholder="San Francisco" required="" autocomplete="address-level2">
+                  <input id="example5-city" name="city" data-tid="elements_examples.form.city_placeholder" class="input" type="text" placeholder="San Francisco" onfocus="this.placeholder = ''" onblur="this.placeholder = 'San Francisco'" required="" autocomplete="address-level2">
                 </div>
                 <div class="field address">
                   <label for="example5-state" data-tid="elements_examples.form.state_label">State</label>
-                  <input id="example5-state" name="state" data-tid="elements_examples.form.state_placeholder" class="input empty" type="text" placeholder="CA" required="" autocomplete="address-level1">
+                  <input id="example5-state" name="state" data-tid="elements_examples.form.state_placeholder" class="input empty" type="text" placeholder="CA" onfocus="this.placeholder = ''" onblur="this.placeholder = 'CA'" required="" autocomplete="address-level1">
                 </div>
                 <div class="field address">
                   <label for="example5-zip" data-tid="elements_examples.form.postal_code_label">ZIP</label>
-                  <input id="example5-zip" name="zip" data-tid="elements_examples.form.postal_code_placeholder" class="input empty" type="text" placeholder="94107" required="" autocomplete="postal-code">
+                  <input id="example5-zip" name="zip" data-tid="elements_examples.form.postal_code_placeholder" class="input empty" type="text" placeholder="94107" onfocus="this.placeholder = ''" onblur="this.placeholder = '94107'" required="" autocomplete="postal-code">
                 </div>
               </div>
             </div>
@@ -178,7 +179,6 @@
           </a>
         </div>
       </div>
-
             </section>
         </main>
   </div>
@@ -190,8 +190,7 @@
     
   </div>
     
- 
-   <script src="js/stripe.js" data-rel-js></script>
+  <script src="js/stripe.js" data-rel-js></script>
     
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
