--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,7 @@
       
     <div class="row justify-content-center">
         <div class="col-lg-8 col-lg-12 col-md-9">
+            <div class="backrgoundPic vignette"></div>
         <div class="o-hidden my-5">
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
@@ -74,7 +75,7 @@
                           </div>
                     </div>
                       <br>
-                    <a href="plans" class="btn btn-danger btn-user btn-block signupText">
+                    <a href="login.html" class="btn btn-danger btn-user btn-block signupText">
                       See Plans Now
                     </a>
                   </form>
@@ -157,9 +158,9 @@
                 <br>
             </div>
             <br><br>
-            <button type="submit" class="btn btn-danger btn-block signupbtn shrinkText">
+            <a href="login.html" class="btn btn-danger btn-block signupbtn shrinkText">
                       REFLECT FREE FOR 14 DAYS
-            </button>
+            </a>
         </div> 
       </div>
     </div>
