--- a/views/editPayment.ejs
+++ b/views/editPayment.ejs
@@ -53,7 +53,7 @@
             
             <div class="spacey-lg"></div>
             <a class="signinText" href="Profile.html">Profile</a>
-            <a class="signinText" href="login.html">Sign In</a>
+            <a class="signinText" href="login.html">Sign Out</a>
         </div>
 </nav>
 <br><br><br>
