--- a/views/EditPlanOption1.ejs
+++ b/views/EditPlanOption1.ejs
@@ -45,7 +45,8 @@
             <a class="signinText" href="login.html">Sign Out</a>
         </div>
 </nav>
-      <br>
+<br><br><br>
+      
     <div class="row justify-content-center">
 
       <div class="col-lg-8 col-lg-12 col-md-9">
@@ -55,47 +56,29 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="p-5">
+                  <div class="text-center">
+                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Edit Subscription</h1>
+                  </div>
                   <form class="user" method="post">
-                      <div class="container text-center">
-                      <h1 class="h2 signinHeader">Edit Subscription</h1>
-                          <br>
-                          <div class="row justify-content-center">
-                            <div id="monthly" class="editOptionSub-card ">
-                                <div class="row align-items-center equal contextBody-sub">
-                                    <div class="col-3 editSubBackCard"></div>
-                                    <div class="col col-3 bg-whitesmoke mobileHide">
-                                        <div class="row justify-content-center"><strong>Current Plan:</strong></div>
-                                        <div class="row justify-content-center">Reflect Monthly</div>
-                                    </div>
-                                    <div class="col-6 mobileHide">Enjoy Live Streaming Workouts and On Demand Classes</div>
-                                    <div class="col-3 mobileHide">$39.99/monthly</div>
-                                    
-                                    <div class="col col-12 mobileShow">Reflect Monthly<hr> $39.99</div>
-                                </div>
-                            </div>
-                          </div>
-                          <br>
-                          <div class="row justify-content-center">
-                            <div id="yearly" class="editOptionSub-card">
-                                <div class="row align-items-center equal contextBody-sub">
-                                    <div class="col-3 editSubBackCard"></div>
-                                    <div class="col-3 bg-whitesmoke mobileHide">
-                                        <div class="row justify-content-center CurrentPlan"><strong>Current Plan:</strong></div>
-                                        <div class="row justify-content-center ">Reflect Yearly</div>
-                                    </div>
-                                    <div class="col-6 mobileHide">Enjoy Live Streaming Workouts and On Demand Classes</div>
-                                    <div class="col-3 mobileHide">$399.99/annually</div>
-                                    
-                                    <div class="col col-12 mobileShow">Reflect Yearly<hr> $399.99</div>
-                                </div>
-                            </div>
-                          </div>
-                          <br>
-                        <div class="row justify-content-center">
-                            <a class="btn btn-danger editOptionSub">Submit</a>
+                        <div class="contextBodyTitle text-left border-top border-dark">
+                          My Plan
                         </div>
-                                
-                      </div>
+                            <div class="row justify-content-center">
+                                <div class="subBtn">
+                                  <strong>Reflect Monthly:</strong>
+                                </div>    
+                            </div>
+                              <div class="row justify-content-center">
+                                <div class="col col-lg-3 subBtn">
+                                    <a class="btn btn-danger editOptionSub" data-toggle="modal" data-target="#squarespaceModal1">Upgrade Plan</a>
+                                </div>
+                                <div class="col col-lg-3 subBtn">
+                                 <a class="btn btn-danger editOptionSub" data-toggle="modal" data-target="#squarespaceModal2">Downgrade Plan</a>
+                                </div>
+                                <div class="col col-lg-3 subBtn">
+                                  <a class="btn btn-danger editOptionSub" data-toggle="modal" data-target="#squarespaceModal3">Cancel Plan</a>
+                                </div>
+                              </div>
                       <br><br><br>
                   </form>
                 </div>
@@ -111,22 +94,22 @@
   </div>
    
 
-<!-- line modal for already have Monthly -->
+<!-- line modal for profile names -->
 <div class="modal fade" id="squarespaceModal1" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title ModelTitle" id="lineModalLabel">You Already Have This Plan</h3>
+            <h3 class="modal-title ModelTitle" id="lineModalLabel">Upgrade Plan</h3>
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body contextBody">
-            <label>You already have Reflect Monthly, Select a different option or return to the profile page. </label>
+            <label>You are Upgrading to Reflect Yearly. You will be charged 399.00 annually. Thats a savings of 6.69 a month!</label>
         </div>
         <div class="modal-footer">
             <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                 <div class="btn-group btn-delete hidden" role="group">
                     <a href="step2.html" class="btn btn-success btn-user btn-block signupText">
-                      Exit 
+                      Upgrade 
                     </a>
                 </div>
             </div>
@@ -135,22 +118,22 @@
   </div>
 </div>
 
-<!-- line modal for already have Yearly -->
-<div class="modal fade" id="squarespaceModal1" role="dialog" aria-labelledby="modalLabel">
+<!-- line modal for language -->
+<div class="modal fade" id="squarespaceModal2" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <h3 class="modal-title ModelTitle" id="lineModalLabel">You Already Have This Plan</h3>
+            <h3 class="modal-title ModelTitle" id="lineModalLabel">Downgrade Plan</h3>
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
         <div class="modal-body contextBody">
-            <label>You already have Reflect Yearly, Select a different option or return to the profile page. </label>
+            <label>You are Downgrading to Reflect Yearly. You will be charged 39.99 a month.</label>
         </div>
         <div class="modal-footer">
             <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                 <div class="btn-group btn-delete hidden" role="group">
                     <a href="step2.html" class="btn btn-success btn-user btn-block signupText">
-                      Exit 
+                      Downgrade
                     </a>
                 </div>
             </div>
@@ -158,10 +141,36 @@
     </div>
   </div>
 </div>
-  
+    
+<!-- line modal for phone number -->
+<div class="modal fade" id="squarespaceModal3" role="dialog" aria-labelledby="modalLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3 class="modal-title ModelTitle" id="lineModalLabel">Cancel Plan</h3>
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        </div>
+        <div class="modal-body contextBody">
+            <label>You are about to cancel your plan. We hope you enjoyed your experience with reflect and are sad to see you go.</label>
+            
+            <p class="ModelText"><i class="fas fa-exclamation-triangle"></i>Your membership will be canceled at the end of your current billing period.</p>
+        </div>
+        <div class="modal-footer">
+            <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                <div class="btn-group btn-delete hidden" role="group">
+                    <a href="step2.html" class="btn btn-success btn-user btn-block signupText">
+                      Cancel Plan
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+     
  
 <!-- Footer -->
-<footer class="page-footer font-small footerCustom">
+<footer class="page-footer font-small fixed-bottom footerCustom">
 
       <!-- Footer Links -->
   <div class="container text-center">
