--- a/views/FamilyPlanning.ejs
+++ b/views/FamilyPlanning.ejs
@@ -18,7 +18,8 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
     
-
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    
 </head>
 
 <body class="bg-gradient-primary">
@@ -26,19 +27,21 @@
 <div class="container my-5">
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top border bg-light" id="mainNav">
-    <div class="container">
-        <div class="container" style="width: 250px; margin: 0;">
-          <div class="row">
-            <div class="col" ><div class="echelonLogo-2"></div></div>
-            <div class="w-100"></div>
-            <div class="col" ><div class="logoy-2"></div></div>
-          </div>
+        <div class="container">
+            <div class="cardEdit">
+              <div class="row">
+                <div class="col" ><div class="echelonLogo-2"></div></div>
+                <div class="w-100"></div>
+                <div class="col" ><div class="logoy-2"></div></div>
+              </div>
+            </div>
+            
+            <div class="spacey-lg"></div>
+            <a class="signinText" href="Profile.html">Profile</a>
+            <a class="signinText" href="login.html">Sign Out</a>
         </div>
-        
-      <a class="signinText" href="login.html">Sign In</a>
-    </div>
 </nav>
-      
+      <br>
     <div class="row justify-content-center">
 
       <div class="col-lg-8 col-lg-12 col-md-9">
@@ -49,28 +52,64 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Add a Family Member.</h1>
+                    <h1 class="h4 mb-4 signinHeader">Manage Family Members</h1>
                       <p>Everyone in your home can enjoy Reflect.</p>
                   </div>
+                    <br>
                   <form class="user" method="post">
                       <div class="text-center">
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Family Member's Name...">
+                            <div class="row justify-content-center">
+                                <div class="col-4 col-md-2 align-self-center familyMemberCard" id="parent"><div id="famPic1" class="familyMemberPhoto-lg"><i class="fas fa-3x fa-user-circle"></i></div>
+                                </div>
+                                <div class="col-6 col-md-6 align-self-center"><label class="label-xl">No Member</label></div>
+                                <a class="col-2 col-2 squareOption" data-toggle="modal" data-target="#squarespaceModal1"><i class="fas fa-2x fa-trash-alt"></i></a>
+                            </div>
                         </div>
+                          <hr>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Family Member's Name...">
+                            <div class="row justify-content-center">
+                                <div class="col-4 col-md-2 align-self-center familyMemberCard" id="parent2"><div id="famPic1" class="familyMemberPhoto-lg"><i class="fas fa-3x fa-user-circle"></i></div>
+                                </div>
+                                <div class="col-6 align-self-center"><label class="label-xl">No Member</label></div>
+                                <a class="col-2 squareOption" data-toggle="modal" data-target="#squarespaceModal1"><i class="fas fa-2x fa-trash-alt"></i></a>
+                            </div>
                         </div>
+                          <hr>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Family Member's Name...">
+                            <div class="row justify-content-center">
+                                <div class="col-4 col-md-2 align-self-center familyMemberCard" id="parent3"><div id="famPic1" class="familyMemberPhoto-lg"><i class="fas fa-3x fa-user-circle"></i></div>
+                                </div>
+                                <div class="col-6 align-self-center"><label class="label-xl">No Member</label></div>
+                                <a class="col-2 squareOption" data-toggle="modal" data-target="#squarespaceModal1"><i class="fas fa-2x fa-trash-alt"></i></a>
+                                
+                            </div>
                         </div>
+                          <hr>
                         <div class="form-group">
-                          <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Family Member's Name...">
+                            <div class="row justify-content-center">
+                                <div class="col-4 col-md-2 align-self-center familyMemberCard" id="parent4"><div id="famPic1" class="familyMemberPhoto-lg"><i class="fas fa-3x fa-user-circle"></i></div>
+                                </div>
+                                <div class="col-6 align-self-center"><label class="label-xl">No Member</label></div>
+                                <a class="col-2 col-md-2 squareOption" data-toggle="modal" data-target="#squarespaceModal1"><i class="fas fa-2x fa-trash-alt"></i></a>
+                            </div>
                         </div>
                     </div>
-                      <br>
-                    <a href="step2.html" class="btn btn-danger btn-user btn-block signupText">
-                      Continue
-                    </a>
+                      <br><br>
+                            <div class="row justify-content-center">
+                                <div class="col-6 col-md-6">
+                                <a href="Profile.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
+                                        <div class="mobileHide">Back to Profile</div>
+                                    <div class="mobileShow">Back</div>
+                                </a>
+                                </div>
+                                <div class="col-6 col-md-6">
+                                <a href="AddFamilyPlanning.html" class="btn btn-danger btn-user btn-block-sm fmBtn">
+                                    <div class="mobileHide">Add Family Member</div>
+                                    <div class="mobileShow">Add</div>
+                                </a>
+                                </div>
+                            </div>
                   </form>
                 </div>
               </div>
@@ -83,6 +122,39 @@
     </div>
 
   </div>
+
+<!-- line modal for Billing details -->
+<div class="modal fade" id="squarespaceModal1" role="dialog" aria-labelledby="modalLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h3 class="modal-title" id="lineModalLabel">Are you sure you want to delete this user?</h3>
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        </div>
+        <div class="modal-body">
+         <div class="form-group">
+            <label class="modal-label">You will be permanently deleting this user and all user data.</label>
+          </div>
+        </div>
+        <div class="modal-footer">
+            <div class="row w-100 h-100" style="padding-right: 20px;">
+                <div class="col-5" >
+                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                      Close
+                    </a>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-5">
+                    <a href="" class="btn btn-danger btn-user btn-block signupText">
+                       Delete
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+
     
 <!-- Footer -->
 <footer class="page-footer font-small footerCustom">
@@ -178,7 +250,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
+  <script src="js/agency.min.js"></script>
 
 </body>
 
