--- a/views/UserInfo.ejs
+++ b/views/UserInfo.ejs
@@ -96,6 +96,17 @@
                                 <input class="form-control infoGender" type="number" name="weight" id="weight" min="0" data-bind="value:replyNumber" />
                             </div>
                         </div>
+                          <br>
+                        <div class="row text-left">
+                            <div class="col">
+                              <label class="labels">Height (feet)</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <input class="form-control infoGender" type="number" step="0.01" name="height" id="height" min="0" data-bind="value:replyNumber" />
+                            </div>
+                        </div>
                           
                       <br>
                     <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user btn-block signupText">
